# cpp-template-project

./: CMakeLists.txt  README.md  conanfile.txt  configure_dev.bash
.github/workflows/: ci.yml
cmake/: utils.cmake
include/hello_world/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/hello_world/: CMakeLists.txt  hello_world.cpp
test/: CMakeLists.txt
test/hello_world/: CMakeLists.txt  hello_world_test.cpp
